--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,6 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  # Allow manual workflow runs
   workflow_dispatch:
 
 permissions:
@@ -13,7 +12,6 @@ permissions:
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment
 concurrency:
   group: "pages"
   cancel-in-progress: true
@@ -36,7 +34,40 @@ jobs:
         cache: 'npm'
 
     - name: Install dependencies
-      run: npm ci
+      run: |
+        npm ci
+        # Ensure react-router-dom is installed
+        if ! npm list react-router-dom >/dev/null 2>&1; then
+          npm install react-router-dom
+        fi
+
+    - name: Verify React Router installation
+      run: |
+        if ! npm list react-router-dom >/dev/null 2>&1; then
+          echo "react-router-dom is not installed!"
+          exit 1
+        fi
+        echo "react-router-dom is properly installed"
+
+    - name: Create Router config for GitHub Pages
+      run: |
+        echo "Creating public/404.html for client-side routing"
+        cat > public/404.html << 'EOL'
+        <!DOCTYPE html>
+        <html>
+          <head>
+            <meta charset="utf-8">
+            <title>Redirecting...</title>
+            <script>
+              sessionStorage.redirect = location.href;
+            </script>
+            <meta http-equiv="refresh" content="0;URL='/'">
+          </head>
+          <body>
+            Redirecting...
+          </body>
+        </html>
+        EOL
 
     - name: Run tests
       run: npm test
@@ -47,6 +78,7 @@ jobs:
       run: npm run build
       env:
         CI: true
+        PUBLIC_URL: "/${{ github.event.repository.name }}"
 
     - name: Setup Pages
       uses: actions/configure-pages@v3
